# mini-orm

./: Cargo.toml  README.md
mini-orm/: Cargo.toml
mini-orm-macro/: Cargo.toml
mini-orm-macro/src/: lib.rs
mini-orm/src/: entity.rs  id_entity.rs  lib.rs  query.rs  relation.rs
mini-orm/src/entity/: id_entity.rs
