[package]
name = "mini-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = "0.28"
sqlx = { version = "0.6", default-features = false, optional = true }
mini-orm-macro = { path = "../mini-orm-macro" }

[dev-dependencies.sqlx]
features = ["runtime-tokio-rustls"]
